--- a/index.html
+++ b/index.html
@@ -299,43 +299,43 @@
             const results = {
                 'pragmatic': {
                     emoji: '⚡',
-                    title: 'Der Pragmatische',
-                    description: 'Du liebst Tee, aber ohne Schnickschnack! Hauptsache er schmeckt und macht wach. Du bist der Typ, der auch mal im Büro einen Teebeutel in der Kaffeetasse vergisst. Völlig okay - Tee soll das Leben einfacher machen, nicht komplizierter!'
+                    title: 'Pragmatische Tee-Persönlichkeit',
+                    description: 'Du liebst Tee, aber ohne Schnickschnack! Hauptsache er schmeckt und macht wach. Du bist vermutlich schon mal mit einem Teebeutel in der Kaffeetasse erwischt worden. Völlig okay - Tee soll das Leben einfacher machen, nicht komplizierter! Probier mal verschiedene Wasser aus - du wirst überrascht sein, was das bringt. Hier mein Artikel dazu, wenn du Fragen hast, melde dich gerne.'
                 },
                 'traditional': {
                     emoji: '🎭',
-                    title: 'Der Traditionalist',
-                    description: 'Du zelebrierst Tee wie andere Leute Wein! Richtige Temperatur, richtige Zeit, richtige Atmosphäre. Du weißt, dass Tee mehr ist als ein Getränk - es ist ein Ritual. Deine Freunde kommen gerne zu dir zum Tee, weil sie wissen: hier wird es besonders.'
+                    title: 'Traditionelle Tee-Persönlichkeit',
+                    description: 'Du zelebrierst Tee wie andere Leute Wein! Richtige Temperatur, richtige Zeit, richtige Atmosphäre. Du weißt, dass Tee mehr ist als ein Getränk - es ist ein Ritual. Deine Freunde kommen gerne zu dir zum Tee, weil sie wissen: hier wird es besonders. Lass uns bei einer privaten Verkostung die Traditionen verschiedener Länder entdecken. Jede Kultur hat ihre eigenen Geheimnisse - von japanischer Sado bis zu britischer Afternoon Tea.'
                 },
                 'explorer': {
                     emoji: '🔬',
-                    title: 'Der Tee-Entdecker',
-                    description: 'Du bist neugierig auf alles, was mit Tee zu tun hat! Neue Sorten, alte Traditionen, verschiedene Zubereitungsarten - du probierst alles aus. Dein Teeschrank ist dein Labor und jede Tasse ein kleines Experiment. Houjicha bei 100 Grad? Challenge accepted!'
+                    title: 'Tee-Entdecker',
+                    description: 'Du bist neugierig auf alles, was mit Tee zu tun hat! Neue Sorten, alte Traditionen, verschiedene Zubereitungsarten - du probierst alles aus. Dein Teeschrank ist dein Labor und jede Tasse ein kleines Experiment. Houjicha bei 100 Grad? Challenge accepted! Begleite mich auf einer Tee-Reise - echte Plantagen, echte Entdeckungen. Dort, wo Tee wächst, verstehst du erst richtig, was du in der Tasse hast.'
                 },
                 'social': {
                     emoji: '👥',
-                    title: 'Der Gesellige',
-                    description: 'Für dich ist Tee vor allem eins: ein Grund, Zeit mit anderen zu verbringen! Du liebst Tee-Dates, gemeinsame Verkostungen und lange Gespräche bei einer warmen Tasse. Tee verbindet Menschen - und du bist der lebende Beweis dafür!'
+                    title: 'Gesellige Tee-Persönlichkeit',
+                    description: 'Für dich ist Tee vor allem eins: ein Grund, Zeit mit anderen zu verbringen! Du liebst Tee-Dates, gemeinsame Verkostungen und lange Gespräche bei einer warmen Tasse. Tee verbindet Menschen - und du bist der lebende Beweis dafür! Lass uns eine Verkostung mit deinen Freunden vereinbaren - ich mache es zu einem unvergesslichen Erlebnis. Oder komm zur Berlin Tea Academy - perfekt um andere Tee-Liebhaber zu treffen.'
                 },
                 'expert': {
                     emoji: '🎓',
-                    title: 'Der Tee-Professor',
-                    description: 'Du weißt ALLES über Tee! Anbaugebiete, Verarbeitungsmethoden, optimale Ziehzeiten - du bist eine wandelnde Tee-Enzyklopädie. Andere fragen dich um Rat und du gibst gerne dein Wissen weiter. Respekt für deine Expertise!'
+                    title: 'Tee-Professor',
+                    description: 'Du weißt ALLES über Tee! Anbaugebiete, Verarbeitungsmethoden, optimale Ziehzeiten - du bist eine wandelnde Tee-Enzyklopädie. Andere fragen dich um Rat und du gibst gerne dein Wissen weiter. Respekt für deine Expertise! Lass uns deine Tee-Sammlung auf das nächste Level bringen. Melde dich gerne bei mir und wir finden einen passenden Kurs oder ich organisiere eine Verkostung mit Gleichgesinnten.'
                 },
                 'cozy': {
                     emoji: '🏠',
-                    title: 'Der Gemütliche',
-                    description: 'Tee ist für dich pure Entspannung! Eine warme Tasse, ein gutes Buch, gemütliche Atmosphäre - perfekt. Du schätzt die ruhigen Momente des Lebens und Tee hilft dir dabei, den Alltag hinter dir zu lassen. Self-care at its finest!'
+                    title: 'Gemütliche Tee-Persönlichkeit',
+                    description: 'Tee ist für dich pure Entspannung! Eine warme Tasse, ein gutes Buch, gemütliche Atmosphäre - perfekt. Du schätzt die ruhigen Momente des Lebens und Tee hilft dir dabei, den Alltag hinter dir zu lassen. Self-care at its finest! Mein Online-Kurs passt perfekt - gemütlich von zuhause lernen. Lass uns dein perfektes Zuhause-Tee-Ritual entwickeln, ohne dass du das Haus verlassen musst.'
                 },
                 'coffee': {
                     emoji: '☕',
-                    title: 'Der Geheime Kaffee-Fan',
-                    description: 'Du machst diesen Test wahrscheinlich nur, weil jemand anders ihn dir geschickt hat! 😄 Aber hey, vielleicht entdeckst du ja doch noch deine Liebe zum Tee. Ein guter Chai oder Earl Grey könnte der Anfang einer wunderbaren Freundschaft sein!'
+                    title: 'Geheime Kaffee-Fans',
+                    description: 'Du machst dieses Quiz wahrscheinlich nur, weil jemand anders es dir geschickt hat! 😄 Aber hey, vielleicht entdeckst du ja doch noch deine Liebe zum Tee. Ein guter Chai oder Earl Grey könnte der Anfang einer wunderbaren Freundschaft sein! Lass uns ins Gespräch kommen - ich finde garantiert einen Tee, der dich überzeugt. Versprochen: es gibt für jeden Kaffee-Trinker den perfekten Einstiegs-Tee.'
                 },
                 'minimalist': {
                     emoji: '🎯',
-                    title: 'Der Minimalistische',
-                    description: 'Weniger ist mehr - das ist dein Tee-Motto! Du brauchst nicht viel Zeug, um guten Tee zu genießen. Eine schöne Tasse, qualitätsvoller Tee, fertig. Du schätzt Einfachheit und weißt, dass die besten Dinge im Leben oft die einfachsten sind.'
+                    title: 'Minimalistische Tee-Persönlichkeit',
+                    description: 'Weniger ist mehr - das ist dein Tee-Motto! Du brauchst nicht viel Zeug, um guten Tee zu genießen. Eine schöne Tasse, qualitätsvoller Tee, fertig. Du schätzt Einfachheit und weißt, dass die besten Dinge im Leben oft die einfachsten sind. Eine Tasse, ein Tee, perfekt zubereitet - lass uns dein minimales Setup optimieren. Tee-Kurs in der Berliner Tee Akademie. Dann erweitern wir deine Sammlung, es gibt so viel zu entdecken.'
                 }
             };
             
