--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 'expert': {
                     emoji: '🎓',
                     title: 'Tee-Professor',
-                    description: 'Du weißt ALLES über Tee! Anbaugebiete, Verarbeitungsmethoden, optimale Ziehzeiten - du bist eine wandelnde Tee-Enzyklopädie. Andere fragen dich um Rat und du gibst gerne dein Wissen weiter. Respekt für deine Expertise! Lass uns deine Tee-Sammlung auf das nächste Level bringen. Melde dich gerne bei mir und wir finden einen passenden Kurs oder ich organisiere eine Verkostung mit Gleichgesinnten.'
+                    description: 'Du weißt ALLES über Tee! Anbaugebiete, Verarbeitungsmethoden, optimale Ziehzeiten - du bist eine wandelnde Tee-Enzyklopädie. Andere fragen dich um Rat und du gibst gerne dein Wissen weiter. Respekt für deine Expertise! Lass uns deine Tee-Sammlung auf das nächste Level bringen. Melde dich gerne bei mir und wir finden einen passenden Kurs in der Berlin Tea Academy; alternativ organisiere ich auch gerne eine Verkostung mit Gleichgesinnten.'
                 },
                 'cozy': {
                     emoji: '🏠',
@@ -335,7 +335,7 @@
                 'minimalist': {
                     emoji: '🎯',
                     title: 'Minimalistische Tee-Persönlichkeit',
-                    description: 'Weniger ist mehr - das ist dein Tee-Motto! Du brauchst nicht viel Zeug, um guten Tee zu genießen. Eine schöne Tasse, qualitätsvoller Tee, fertig. Du schätzt Einfachheit und weißt, dass die besten Dinge im Leben oft die einfachsten sind. Eine Tasse, ein Tee, perfekt zubereitet - lass uns dein minimales Setup optimieren. Tee-Kurs in der Berliner Tee Akademie. Dann erweitern wir deine Sammlung, es gibt so viel zu entdecken.'
+                    description: 'Weniger ist mehr - das ist dein Tee-Motto! Du brauchst nicht viel Zeug, um guten Tee zu genießen. Eine schöne Tasse, qualitativ hochwertiger Tee, das scheint genau deins zu sein. Du schätzt Simplizität und weißt, dass die besten Dinge im Leben oft die einfachsten sind. Eine Tasse, ein Tee, perfekt zubereitet - lass uns dein minimales Setup optimieren. Buch gerne einen Tee-Kurs in der Berlin Tea Academy. Dann erweitern wir deine Sammlung, es gibt so viel zu entdecken.'
                 }
             };
             
