--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 'explorer': {
                     emoji: '🔬',
                     title: 'Tee-Entdecker',
-                    description: 'Du bist neugierig auf alles, was mit Tee zu tun hat! Neue Sorten, alte Traditionen, verschiedene Zubereitungsarten - du probierst alles aus. Dein Teeschrank ist dein Labor und jede Tasse ein kleines Experiment. Houjicha bei 100 Grad? Challenge accepted! Begleite mich auf einer Tee-Reise - echte Plantagen, echte Entdeckungen. Dort, wo Tee wächst, verstehst du erst richtig, was du in der Tasse hast.'
+                    description: 'Du bist neugierig auf alles, was mit Tee zu tun hat! Neue Sorten, alte Traditionen, verschiedene Zubereitungsarten - du probierst alles aus. Dein Teeschrank ist dein Labor und jede Tasse ein kleines Experiment. Houjicha bei 100 Grad? Challenge accepted! Begleite mich auf einer Tee-Reise - echte Plantagen, echte Entdeckungen. Dort, wo Tee wächst, verstehst du erst richtig, was du in der Tasse hast. Meld dich gerne bei mir und ich organisiere eine geführte Teeentdeckungsreise, sobald sich genügend Personen finden. '
                 },
                 'social': {
                     emoji: '👥',
